# arai

./: ARAI.ipynb  README.md  hello.py  pyproject.toml
arai/: pubsub_ideas.json
arai/agents/: base.py  profile.py
arai/agents/offline/: document_parser.py  first_page_summarizer.py  jargon_extractor.py
arai/agents/online/: inputagent.py  jargon_detector.py  organizer.py  query_rewriter.py
arai/memories/: base.py  events.py  jargon.py  long_term.py  persona.py
arai/utils/: chunking.py  llm_utils.py  utils.py
arai/variables/: memory.py  model.py
db/: memory.db
