[project]
name = "arai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.3",
    "boto3>=1.35.81",
    "duckdb>=1.1.3",
    "einops>=0.8.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pymupdf4llm>=0.0.17",
    "sentence-transformers>=3.3.1"
]

